--- a/tweede.html
+++ b/tweede.html
@@ -39,39 +39,31 @@
             
 
             function add() {
-                let invoer1 = document.getElementById('invoer1');
-                let invoer2 = document.getElementById('invoer2');
+                let invoer1 =  Number.parseInt(document.getElementById('invoer1').value);
+                let invoer2 =  Number.parseInt(document.getElementById('invoer2').value);
 
-                let invoer1Waarde = Number.parseInt(invoer1.value);
-                let invoer2Waarde = Number.parseInt(invoer2.value);
-                alert(invoer1Waarde + invoer2Waarde);
+                alert(invoer1 + invoer2);
             }
 
             function reduce() {
-                let invoer1 = document.getElementById('invoer1');
-                let invoer2 = document.getElementById('invoer2');
+                let invoer1 =  Number.parseInt(document.getElementById('invoer1').value);
+                let invoer2 =  Number.parseInt(document.getElementById('invoer2').value);
 
-                let invoer1Waarde = Number.parseInt(invoer1.value);
-                let invoer2Waarde = Number.parseInt(invoer2.value);
-                alert(invoer1Waarde - invoer2Waarde);
+                alert(invoer1 - invoer2);
             }
 
             function multiply() {
-                let invoer1 = document.getElementById('invoer1');
-                let invoer2 = document.getElementById('invoer2');
+                let invoer1 =  Number.parseInt(document.getElementById('invoer1').value);
+                let invoer2 =  Number.parseInt(document.getElementById('invoer2').value);
 
-                let invoer1Waarde = Number.parseInt(invoer1.value);
-                let invoer2Waarde = Number.parseInt(invoer2.value);
-                alert(invoer1Waarde * invoer2Waarde);
+                alert(invoer1 * invoer2);
             }
 
             function divide() {
-                let invoer1 = document.getElementById('invoer1');
-                let invoer2 = document.getElementById('invoer2');
+                let invoer1 =  Number.parseInt(document.getElementById('invoer1').value);
+                let invoer2 =  Number.parseInt(document.getElementById('invoer2').value);
 
-                let invoer1Waarde = Number.parseInt(invoer1.value);
-                let invoer2Waarde = Number.parseInt(invoer2.value);
-                alert(invoer1Waarde / invoer2Waarde);
+                alert(invoer1 / invoer2);
             }
 
         </script>
